; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_webvtt.c_ParserHeaderHandler.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_webvtt.c_ParserHeaderHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_ctx = type { i32, i32 }

@WEBVTT_HEADER_STYLE = common dso_local global i32 0, align 4
@WEBVTT_HEADER_REGION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i8*)* @ParserHeaderHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ParserHeaderHandler(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.callback_ctx*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @VLC_UNUSED(i32 %10)
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.callback_ctx*
  store %struct.callback_ctx* %13, %struct.callback_ctx** %9, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @WEBVTT_HEADER_STYLE, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %22

17:                                               ; preds = %4
  %18 = load %struct.callback_ctx*, %struct.callback_ctx** %9, align 8
  %19 = getelementptr inbounds %struct.callback_ctx, %struct.callback_ctx* %18, i32 0, i32 1
  %20 = load i8*, i8** %8, align 8
  %21 = call i32 @memstream_Append(i32* %19, i8* %20)
  br label %32

22:                                               ; preds = %4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @WEBVTT_HEADER_REGION, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %22
  %27 = load %struct.callback_ctx*, %struct.callback_ctx** %9, align 8
  %28 = getelementptr inbounds %struct.callback_ctx, %struct.callback_ctx* %27, i32 0, i32 0
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @memstream_Append(i32* %28, i8* %29)
  br label %31

31:                                               ; preds = %26, %22
  br label %32

32:                                               ; preds = %31, %17
  ret void
}

declare dso_local i32 @VLC_UNUSED(i32) #1

declare dso_local i32 @memstream_Append(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
